[package]
name = "chiral-apps"
version = "0.1.3"
edition = "2021"
authors = ["Qin Wan <rogerwq@gmail.com>"]
license = "MIT"
description = "Applications available on chiral" 
repository = "https://github.com/chiral-data/chiral"
homepage = "https://www.chiral.one"
keywords = ["hpc", "cheminformatics", "bioinformatics", "data", "AI"]
categories = ["science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cxx = "1.0"
openbabel = "0.5.3" 
chiral-derive = "0.1.3"
chiral-common = "0.1.3"

[build-dependencies]
cxx-build = "1.0"
