[package]
name = "chiral-apps"
version = "0.1.3"
edition = "2021"
authors = ["Qin Wan <rogerwq@gmail.com>"]
license = "MIT"
description = "Applications available on chiral" 
repository = "https://github.com/chiral-data/chiral"
homepage = "https://www.chiral.one"
keywords = ["hpc", "cheminformatics", "bioinformatics", "data", "AI"]
categories = ["science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cxx = "1.0"
anyhow = "1.0"
openbabel = { version = "0.5.3", optional = true }
gromacs = { path = "../../../gromacs-rust" }
chiral-derive = { path = "/mnt/c/cygwin64/home/Owner/dev_chiral/chiral/crates/derive" }
chiral-common = { path = "/mnt/c/cygwin64/home/Owner/dev_chiral/chiral/crates/common" }

[build-dependencies]
cxx-build = "1.0"

[features]
openbabel = ["dep:openbabel"]
