[package]
name = "chiral-common"
version = "0.1.5"
edition = "2021"
authors = ["Qin Wan <rogerwq@gmail.com>"]
license = "MIT"
description = "Common Stuff of Chiral: An All-in-One Data Processing Tool"
repository = "https://github.com/chiral-data/chiral"
homepage = "https://www.chiral.one"
keywords = ["hpc", "cheminformatics", "bioinformatics", "data", "AI"]
categories = ["science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
anyhow = "1.0"
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
permutation = "0.4"
# home = "0.5.4"
# clap = { version = "4.0", features = ["derive"] }
# thiserror = "1.0"
rand = "0.8"
# flate2 = "1.0"
# indicatif = "0.17"
pyo3 = { version = "0.18", optional = true }
chiral-derive = { path = "/Users/qw/Documents/dev-chiral/chiral/crates/derive" }

[dev-dependencies]

[features]
python = ["pyo3"]